--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.venv
 MNIST_Classification/data
 MNIST_Classification/history_comparison.npz
 MNIST_Classification/val_accuracy_comparison.png
+LTC_network/data
+LTC_network/results
