--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Translation/eng_french.csv
 Translation/ltc_translator_best.pt
 Translation/__pycache__
 Translation/ltc_translator_attention.pt
+Translation/ltc_translator_attention_1.pt
