--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ Translation/ltc_translator_attention_1.pt
 LTC_optimization/__pycache__
 LTC_optimization/cuda_ode_step/build
 LTC_optimization/cuda_ode_step/cuda_ode_step.egg-info
+Kernel/build
+Kernel/liquid_cuda.egg-info
